Corrigido declaração de ArrayList, modificado declaração de URL e adicionado catch para exceção de URI, comentado import's não utilizados